Implement catalog service (WIP)